- removed deprecated Java 9/10 method calls